= Change Log

All notable changes to this project will be documented in this file. This change log follows the conventions of http://keepachangelog.com/[keepachangelog.com].

== Unreleased (dev)
// {{{
=== Added
* Add `--without-cljs` option to `iced` command.
* Add `g:iced#format#does_overwrite_rules` option.

=== Changed
* Bump https://github.com/liquidz/iced-nrepl[iced-nrepl] to 0.4.3.

=== Fixed
* https://github.com/liquidz/vim-iced/pull/117[#117]: Fix to detect channel disconnection on neovim.
* Fix grimoire fetching error with OpenJDK 11.
** See https://github.com/http-kit/http-kit/issues/388
// }}}

== 0.10.3 (2019-03-25)
// {{{
=== Added
* Add some extra documents.
** https://liquidz.github.io/vim-iced/vim-iced.html

=== Changed
* https://github.com/liquidz/vim-iced/pull/110[#110]: Change `:IcedDocumentOpen` not to move focus if document buffer is already opened.

=== Fixed
* Fix arguments for `nvim_open_win`
** Neovim's https://github.com/neovim/neovim/commit/27c4b6b9bd90fbc3a41945f87ec944bd0ced8228#diff-49e08ed0add04457bc8a43c962736f13L628[API] has changed.
* https://github.com/liquidz/vim-iced/pull/105[#105]: Fix shadow-cljs build-id to trim the beginning colon
* https://github.com/liquidz/vim-iced/pull/107[#107]: Fix iced command to render color correctly
// }}}

== 0.10.2 (2019-03-10)
// {{{
=== Added
* https://github.com/liquidz/vim-iced/pull/96[#96]: Add floating window support for neovim.
** You need nightly build(0.4.0) currently.
* Add github pages for help file.
** https://liquidz.github.io/vim-iced/vim-iced.html
** powered by https://github.com/liquidz/clj-vimhelp[clj-vimhelp].

=== Fixed
* https://github.com/liquidz/vim-iced/pull/101[#101]: Fix not to evaluate `in-ns` while appending lines to stdout buffer.
// }}}

== 0.10.1 (2019-03-05)
// {{{
=== Added
* Add http://shadow-cljs.org[shadow-cljs] as a CLJS environment.
** Now you can start CLJS REPL via `:IcedStartCljsRepl shadow-cljs {build-id}`.