@@ -5,10 +5,14 @@ SCRIPT_DIR=$(cd $(dirname $0); pwd)
 PROJECT_DIR=$(cd $SCRIPT_DIR; cd ..; pwd)
 VERSION=$(grep 'Version: ' ${SCRIPT_DIR}/../doc/vim-iced.txt | cut -d' ' -f2)
 
+DEPENDENCIES=( 'nrepl:0.6.0 refactor-nrepl:2.4.0 cider/cider-nrepl:0.21.1 iced-nrepl:0.4.3' 'nrepl:0.6.0 refactor-nrepl:2.4.0 cider/cider-nrepl:0.21.1 iced-nrepl:0.4.3 cider/piggieback:0.4.0' )
+MIDDLEWARES=( 'cider.nrepl/wrap-classpath cider.nrepl/wrap-complete cider.nrepl/wrap-debug cider.nrepl/wrap-format cider.nrepl/wrap-info cider.nrepl/wrap-macroexpand cider.nrepl/wrap-ns cider.nrepl/wrap-out cider.nrepl/wrap-spec cider.nrepl/wrap-test cider.nrepl/wrap-trace cider.nrepl/wrap-undef refactor-nrepl.middleware/wrap-refactor iced.nrepl/wrap-iced' 'cider.nrepl/wrap-classpath cider.nrepl/wrap-complete cider.nrepl/wrap-debug cider.nrepl/wrap-format cider.nrepl/wrap-info cider.nrepl/wrap-macroexpand cider.nrepl/wrap-ns cider.nrepl/wrap-out cider.nrepl/wrap-spec cider.nrepl/wrap-test cider.nrepl/wrap-trace cider.nrepl/wrap-undef refactor-nrepl.middleware/wrap-refactor iced.nrepl/wrap-iced cider.piggieback/wrap-cljs-repl' )
+
 IS_LEININGEN=0
 IS_BOOT=0
 IS_CLOJURE_CLI=0
 IS_SHADOW_CLJS=0
+IS_DRYRUN=0
 
 function iced_usage() {
     echo "vim-iced ${VERSION}"
@@ -27,7 +31,9 @@ function iced_usage() {
 
 function iced_repl_usage() {
     echo "Usage:"
-    echo "  iced repl [options] [--with-cljs] [--force-boot] [--force-clojure-cli]"
+    echo "  iced repl [options] [--with-cljs] [--without-cljs]"
+    echo "            [--dependencies=VALUE] [--middleware=VALUE]"
+    echo "            [--force-boot] [--force-clojure-cli]"
     echo ""
     echo "Start repl. Leiningen, Boot, and Clojure CLI are supported."
     echo ""
@@ -36,6 +42,13 @@ function iced_repl_usage() {
     echo "file(eg. project.clj) contains 'org.clojure/clojurescript' dependency."
     echo ""
     echo "On the other hand, the --without-cljs option disables ClojureScript features."
+    echo ""
+    echo "The --dependency option adds extra dependency."
+    echo "VALUE format is 'PACKAGE_NAME:VERSION'."
+    echo "For example: --dependency=iced-nrepl:0.4.3"
+    echo ""
+    echo "The --middleware option adds extra nrepl middleware."
+    echo "For example: --middleware=iced.nrepl/wrap-iced"
     echo ""
     echo "The --force-boot and --force-clojure-cli option enable you to start specified repl."
     echo ""
@@ -56,6 +69,69 @@ function echo_error() {
     echo -e "\x1B[31mNG\x1B[m: \x1B[1m${1}\x1B[m"
 }
 
+function leiningen_deps_args() {
+    local deps=($@)
+
+    for s in "${deps[@]}" ; do
+        key="${s%%:*}"
+        value="${s##*:}"
+        echo -n "update-in :dependencies conj '[${key} \"${value}\"]' -- "
+    done
+}
+
+function leiningen_middleware_args() {
+    local mdws=($@)
+    for value in "${mdws[@]}" ; do
+        echo -n "update-in :repl-options:nrepl-middleware conj '${value}' -- "
+    done
+}
+
+function boot_deps_args() {
+    local deps=($@)
+
+    echo -n '-i "(require ''cider.tasks)" '
+    for s in "${deps[@]}" ; do
+        key="${s%%:*}"
+        value="${s##*:}"
+        echo -n "-d ${key}:${value} "
+    done
+}
+
+function boot_middleware_args() {
+    local mdws=($@)
+    echo -n '-- cider.tasks/add-middleware '
+    for value in "${mdws[@]}" ; do
+        echo -n "-m ${value} "
+    done
+}
+
+function cli_deps_args() {
+    local deps=($@)
+    for s in "${deps[@]}" ; do
+        key="${s%%:*}"
+        value="${s##*:}"
+        echo -n "${key} {:mvn/version \"${value}\"} "
+    done
+}
+
+function cli_middleware_args() {
+    local mdws=($@)
+    echo -n "-m '["
+    for value in "${mdws[@]}" ; do
+        echo -n "\"${value}\" "
+    done
+    echo -n "]'"
+}
+
+function run() {
+    local cmd=$1
+    if [ $IS_DRYRUN -eq 0 ]; then
+        bash -c "$cmd"
+    else
+        echo $cmd
+    fi
+}
+
 if [ $# -lt 1 ]; then
     iced_usage
     exit 1
@@ -71,17 +147,28 @@ FORCE_CLOJURE_CLI=0
 DISABLE_CLJS_DETECTOR=0
 
 OPTIONS=""
+EXTRA_DEPENDENCIES=""
+EXTRA_MIDDLEWARES=""
 for x in ${ARGV[@]}; do
-    if [ $x = '--help' ]; then
+    key="${x%%=*}"
+    value="${x##*=}"
+
+    if [ $key = '--help' ]; then
         IS_HELP=1
-    elif [ $x = '--with-cljs' ]; then
+    elif [ $key = '--with-cljs' ]; then
         IS_CLJS=1
-    elif [ $x = '--without-cljs' ]; then
+    elif [ $key = '--without-cljs' ]; then
         DISABLE_CLJS_DETECTOR=1
-    elif [ $x = '--force-boot' ]; then
+    elif [ $key = '--force-boot' ]; then
         FORCE_BOOT=1
-    elif [ $x = '--force-clojure-cli' ]; then
+    elif [ $key = '--force-clojure-cli' ]; then
         FORCE_CLOJURE_CLI=1
+    elif [ $key = '--dependency' ]; then
+        EXTRA_DEPENDENCIES="${EXTRA_DEPENDENCIES} ${value}"
+    elif [ $key = '--middleware' ]; then
+        EXTRA_MIDDLEWARES="${EXTRA_MIDDLEWARES} ${value}"
+    elif [ $x = '--dryrun' ]; then
+        IS_DRYRUN=1
     else
         OPTIONS="${OPTIONS} ${x}"
     fi
@@ -155,32 +242,37 @@ elif [ $FORCE_CLOJURE_CLI -eq 1 ]; then
     IS_BOOT=0
 fi
 
+
+# cljs = 1
+# next = 2
+# nnext = 4
+CONFIG_INDEX=0
+if [ $IS_CLJS -eq 1 ]; then
+    CONFIG_INDEX=$((CONFIG_INDEX+1))
+fi
+
+TARGET_DEPENDENCIES="${DEPENDENCIES[$CONFIG_INDEX]} ${EXTRA_DEPENDENCIES}"
+TARGET_MIDDLEWARES="${MIDDLEWARES[$CONFIG_INDEX]} ${EXTRA_MIDDLEWARES}"
+
 case "$1" in
     "repl")
         if [ $IS_HELP -eq 1 ]; then
             iced_repl_usage
         elif [ $IS_LEININGEN -eq 1 ]; then
             echo_info "Leiningen project is detected"
-            if [ $IS_CLJS -eq 0 ]; then
-                lein update-in :dependencies conj '[nrepl "0.6.0"]' -- update-in :dependencies conj '[refactor-nrepl "2.4.0"]' -- update-in :dependencies conj '[cider/cider-nrepl "0.21.1"]' -- update-in :dependencies conj '[iced-nrepl "0.4.3"]' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-classpath' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-complete' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-debug' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-format' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-info' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-macroexpand' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-ns' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-out' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-spec' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-test' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-trace' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-undef' -- update-in :repl-options:nrepl-middleware conj 'refactor-nrepl.middleware/wrap-refactor' -- update-in :repl-options:nrepl-middleware conj 'iced.nrepl/wrap-iced' -- $OPTIONS repl
-            else
-                lein update-in :dependencies conj '[nrepl "0.6.0"]' -- update-in :dependencies conj '[refactor-nrepl "2.4.0"]' -- update-in :dependencies conj '[cider/cider-nrepl "0.21.1"]' -- update-in :dependencies conj '[iced-nrepl "0.4.3"]' -- update-in :dependencies conj '[cider/piggieback "0.4.0"]' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-classpath' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-complete' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-debug' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-format' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-info' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-macroexpand' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-ns' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-out' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-spec' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-test' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-trace' -- update-in :repl-options:nrepl-middleware conj 'cider.nrepl/wrap-undef' -- update-in :repl-options:nrepl-middleware conj 'refactor-nrepl.middleware/wrap-refactor' -- update-in :repl-options:nrepl-middleware conj 'iced.nrepl/wrap-iced' -- update-in :repl-options:nrepl-middleware conj 'cider.piggieback/wrap-cljs-repl' -- $OPTIONS repl
-            fi
+            run "lein $(leiningen_deps_args ${TARGET_DEPENDENCIES}) \
+                      $(leiningen_middleware_args ${TARGET_MIDDLEWARES}) \
+                      $OPTIONS repl"
         elif [ $IS_BOOT -eq 1 ]; then
             echo_info "Boot project is detected"
-            if [ $IS_CLJS -eq 0 ]; then
-                boot -i "(require 'cider.tasks)" -d nrepl:0.6.0 -d refactor-nrepl:2.4.0 -d cider/cider-nrepl:0.21.1 -d iced-nrepl:0.4.3 -- cider.tasks/add-middleware -m cider.nrepl/wrap-classpath -m cider.nrepl/wrap-complete -m cider.nrepl/wrap-debug -m cider.nrepl/wrap-format -m cider.nrepl/wrap-info -m cider.nrepl/wrap-macroexpand -m cider.nrepl/wrap-ns -m cider.nrepl/wrap-out -m cider.nrepl/wrap-spec -m cider.nrepl/wrap-test -m cider.nrepl/wrap-trace -m cider.nrepl/wrap-undef -m refactor-nrepl.middleware/wrap-refactor -m iced.nrepl/wrap-iced -- $OPTIONS repl
-            else
-                boot -i "(require 'cider.tasks)" -d nrepl:0.6.0 -d refactor-nrepl:2.4.0 -d cider/cider-nrepl:0.21.1 -d iced-nrepl:0.4.3 -d cider/piggieback:0.4.0 -- cider.tasks/add-middleware -m cider.nrepl/wrap-classpath -m cider.nrepl/wrap-complete -m cider.nrepl/wrap-debug -m cider.nrepl/wrap-format -m cider.nrepl/wrap-info -m cider.nrepl/wrap-macroexpand -m cider.nrepl/wrap-ns -m cider.nrepl/wrap-out -m cider.nrepl/wrap-spec -m cider.nrepl/wrap-test -m cider.nrepl/wrap-trace -m cider.nrepl/wrap-undef -m refactor-nrepl.middleware/wrap-refactor -m iced.nrepl/wrap-iced -m cider.piggieback/wrap-cljs-repl -- $OPTIONS repl
-            fi
+            run "boot $(boot_deps_args ${TARGET_DEPENDENCIES}) \
+                      $(boot_middleware_args ${TARGET_MIDDLEWARES}) \
+                      -- $OPTIONS repl"
         elif [ $IS_CLOJURE_CLI -eq 1 ]; then
             echo_info "Clojure CLI project is detected"
-            if [ $IS_CLJS -eq 0 ]; then
-                clojure $OPTIONS -Sdeps "{:deps {iced-repl {:local/root \"${PROJECT_DIR}\"}}}" -m iced-repl
-            else
-                clojure $OPTIONS -Sdeps "{:deps {iced-repl {:local/root \"${PROJECT_DIR}\"} cider/piggieback {:mvn/version \"0.4.0\"}}}" \
-                    -m iced-repl 'with-cljs-middleware'
-            fi
+
+            run "clojure $OPTIONS -Sdeps '{:deps {iced-repl {:local/root \"${PROJECT_DIR}\"} $(cli_deps_args ${TARGET_DEPENDENCIES}) }}' \
+                         -m nrepl.cmdline $(cli_middleware_args ${TARGET_MIDDLEWARES})"
         elif [ $IS_SHADOW_CLJS -eq 1 ]; then
             echo_error 'Currently iced command does not support shadow-cljs.'
             echo 'Please see `:h vim-iced-manual-shadow-cljs` for manual setting up.'
