@@ -4,10 +4,28 @@
         refactor-nrepl {:mvn/version "2.4.0"}
         cider/cider-nrepl {:mvn/version "0.21.1"}
         iced-nrepl {:mvn/version "0.4.3"}}
+ :__middlewares__
+ ["cider.nrepl/wrap-classpath"
+  "cider.nrepl/wrap-complete"
+  "cider.nrepl/wrap-debug"
+  "cider.nrepl/wrap-format"
+  "cider.nrepl/wrap-info"
+  "cider.nrepl/wrap-macroexpand"
+  "cider.nrepl/wrap-ns"
+  "cider.nrepl/wrap-out"
+  "cider.nrepl/wrap-spec"
+  "cider.nrepl/wrap-test"
+  "cider.nrepl/wrap-trace"
+  "cider.nrepl/wrap-undef"
+  "refactor-nrepl.middleware/wrap-refactor"
+  "iced.nrepl/wrap-iced"]
 
  :aliases
- {:icedcljs {:extra-deps {cider/piggieback {:mvn/version "0.4.0"}}}
-  :jackin {:extra-deps {org.panchromatic/mokuhan {:mvn/version "0.1.1"}}}
+ {:cljs {:extra-deps {cider/piggieback {:mvn/version "0.4.0"}}
+         :__middlewares__ ["cider.piggieback/wrap-cljs-repl"]}
+
+  :jackin {:extra-deps {org.panchromatic/mokuhan {:mvn/version "0.1.1"}
+                        org.clojure/math.combinatorics {:mvn/version "0.1.5"}}}
   :ancient {:extra-deps {olical/depot {:mvn/version "1.7.0"}}
             :main-opts ["-m" "depot.outdated.main"]}
   :doc {:extra-deps {liquidz/clj-vimhelp {:git/url "https://github.com/liquidz/clj-vimhelp"
